Implemented handling of ZIP file resources